<resources>
    <string name="app_name">ProjectReachOut</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="account_type">Account Type</string>
    <string name="display_name">Username</string>
    <string name="time_stamp">14 Feb 2014</string>


    <string name="title_home">Home</string>
    <string name="title_my_articles">My Articles</string>
    <string name="title_add_article">Add Article</string>
    <string name="title_add_event" translatable="false">Add Event</string>
    <string name="title_events">Events</string>
    <string name="title_my_events">My Events</string>

    <string name="dummy_text">Some text will be displayed here.</string>

    <!-- AddNewArticleFragment -->
    <string name="choose_picture">Choose Picture</string>
    <string name="lbl_set_profile_photo">Upload image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>


    <string name="title_activity_select_people">Select Organizers</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_change_password">Change Password</string>

    <string name="input_alphabets_no_space">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="input_alphanumeric_no_space">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM0123456789</string>

    <string name="app_link">https://play.google.com/store/apps/details?user_id=com.projectreachout</string>

    <!--Notification Contents-->
    <string name="notification_title_new_article">New Article</string>
    <string name="notification_title_new_event">New Event</string>
    <string name="notification_body_new_article">You have some new articles available you haven\'t seen</string>
    <string name="notification_body_new_event">You have a new event around the corner and you might not want to miss it</string>
    <string name="server_client_id">server_client_id</string>
    <string name="title_manage_user">Manage user</string>

    <!--v3 starts-->
    <string name="db_col_article">Article</string>
    <string name="db_col_user">User</string>
    <string name="db_col_reaction">Reaction</string>

    <string name="db_field_time_stamp">time_stamp</string>
    <string name="db_field_user_id">user_id</string>
    <string name="db_field_reaction">reaction</string>
    <!--v3 ends-->
</resources>
