<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:id="@+id/tv_nhm_account_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="@dimen/text_view_gap"
        android:gravity="center"
        android:text="@string/account_type"
        android:textAllCaps="true"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        tools:textAppearance="?android:textAppearanceMedium" />

    <ImageView
        android:id="@+id/iv_nhm_user_profile_picture"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:layout_gravity="center"
        android:contentDescription="@string/nav_header_desc"
        android:gravity="center"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/ic_person_black_124dp" />

    <TextView
        android:id="@+id/tv_nhm_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/text_view_gap"
        android:layout_marginBottom="@dimen/text_view_gap"
        android:gravity="center"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_nhm_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/text_view_gap"
        android:layout_marginBottom="@dimen/text_view_gap"
        android:gravity="center"
        android:text="@string/nav_header_subtitle"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_nhm_my_articles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:text="@string/title_my_articles"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <Button
            android:id="@+id/btn_nhm_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:text="Edit Profile"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="visible" />
    </LinearLayout>
</LinearLayout>
