<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/feed_item_vertical_margin"
    android:paddingBottom="@dimen/feed_item_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sub_item_gap"
        android:layout_marginRight="@dimen/sub_item_gap"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/iv_pfi_profile_picture"
            android:layout_width="@dimen/feed_item_profile_pic"
            android:layout_height="@dimen/feed_item_profile_pic"
            app:civ_border_color="#FF000000"
            app:civ_border_width="1dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="@dimen/sub_item_gap"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_pfi_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="@dimen/feed_item_profile_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_pfi_time_stamp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_stamp"
                android:textColor="@color/black"
                android:textSize="@dimen/feed_item_timestamp" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <TextView
            android:id="@+id/tv_pfi_team_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corner_background"
            android:gravity="center"
            android:paddingStart="@dimen/text_view_gap"
            android:paddingEnd="@dimen/text_view_gap"
            android:paddingBottom="@dimen/feed_team_name_padding_bottom"
            android:text="@string/account_type"
            android:textColor="@color/white"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/ibtn_pfi_overflow_button"
            style="?android:attr/actionOverflowButtonStyle"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="edit event overflow button"
            android:visibility="gone" />
    </LinearLayout>

    <com.projectreachout.PostFeed.FeedImageView
        android:id="@+id/iv_pfi_post_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sub_item_gap"
        android:background="@color/white"
        android:scaleType="fitXY"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_pfi_description"
        android:layout_width="match_parent"
        android:justificationMode="inter_word"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sub_item_gap"
        android:layout_marginTop="@dimen/sub_item_gap"
        android:text="@string/dummy_text" />

</LinearLayout>